# Clarity

./: .env.example  .gitignore  .vercelignore  DEMO_SCRIPT.md  INTEGRATION_STATUS.md  PERSON_C_DELIVERABLES.md  PERSON_C_QUICK_START.md  PITCH_DECK.md  README.md  TEAM_INSTRUCTIONS.md  TESTING_GUIDE.md  TEST_RESULTS.md  debug_insforge.py  demo_scenarios.py  demo_video_test.py  pyproject.toml  record_demo.py  requirements.txt  test_all.py  test_features.py  test_full_integration.py  test_insforge.py  test_insforge_direct.py  test_interceptor.py  test_interceptor_mock.py  test_sdk_local.py  test_verify.py  vercel.json
api/: index.py
clarity/: __init__.py  config.py  main.py  sdk.py  setup_db.py
clarity/agents/: __init__.py  confidence.py  context_analyzer.py  hallucination.py  langchain_runtime.py  orchestrator.py  reasoning.py  state.py  trajectory_grader.py
clarity/api/: __init__.py  app.py  routes.py
clarity/integrations/: __init__.py  ada_client.py  insforge_client.py  tinyfish_client.py
clarity/models/: __init__.py  request_capture.py  trust_report.py
clarity/proxy/: __init__.py  interceptor.py  metadata.py
dashboard/: index.html
