[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarity-ai-verifier"
version = "0.1.0"
description = "AI Output Verification Layer - Trust Reports for LLM Outputs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Team", email = "team@clarity.ai"}]

dependencies = [
    "anthropic>=0.28.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.8",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["clarity*"]

[tool.setuptools.package-data]
clarity = ["py.typed"]
